tests/ui/typeck/issue-103899.next.stderr
error[E0277]: the trait bound `(): BaseWithAssoc` is not satisfied
  --> $DIR/issue-103899.rs:24:54
   |
LL | fn trigger<L: WrapperWithAssoc<BaseAssoc = ()>>() -> DoubleProject<L> {
   |                                                      ^^^^^^^^^^^^^^^^ the trait `BaseWithAssoc` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-103899.rs:4:1
   |
LL | trait BaseWithAssoc {
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
